--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       Excel Bipado<br/>
       <input id="file2" type="file" id="excelBipado" name="excelBipado" accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
     </p>
+    <hr>
+    <p>
+      versão 1.0.4
+    </p>
 
     <button id="checkFilesButton" class="button button2" ><span>Processar </span></button>
 
